z-index bglogo fix

--- a/css/app.css
+++ b/css/app.css
@@ -232,12 +232,12 @@ li[role=option] .ui-btn-inner a {white-space:normal!important;}
 /****************************** CONTENT */
 
 /****************************** PAGES */
-/*
+
 .content {
-	margin: 0;
-	padding-top: 5px;
+	position: relative;
+	z-index: 10;
 }
-*/
+
 /* LOADING */
 
 h2 {
